# tomosphero

./: .gitignore  CHANGELOG.rst  Makefile  README.md  index.html  paper.bib  paper.md  pykeepass.html  pyproject.toml  requirements.txt  tomosphero.html
dev/: logo.py
examples/: dynamic_measurements.py  memory_usage.py  single_vantage.py  static_retrieval.py
sph_raytracer/: geometry.py  raytracer.py  retrieval.py
template/: custom.css  module.html.jinja2
tomosphero/: #63557655976a1998d50a7a833892fd70e8f6b406#  foobar.html  geometry.html  geometry.py  loss.html  loss.py  model.html  model.py  plotting.html  plotting.py  raytracer.html  raytracer.py  raytracer.sync-conflict-20251104-003509-IOS5YCQ.html  retrieval.html  retrieval.py  test_all.html  test_examples.html  test_model.html  test_model.py  test_plotting.html  test_raytracer.html  test_raytracer.py  test_retrieval.html
tutorial/: figures.py  tutorial.md
