[project]
name = "sph_raytracer"
version = "0.0.1"
description = "PyTorch volume raytracer in spherical coordinates"
dependencies = [
  "torch>=1.12.1",
  "tqdm"
]
authors = [
  {name = "Evan Widloski", email = "evan_gh@widloski.com"}
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['sph_raytracer']
