[project]
name = "tomosphero"
version = "0.0.2"
description = "PyTorch volume raytracer in spherical coordinates"
readme = "README.md"
dependencies = [
  "tqdm",
  "torch>=1.12.1",
]
authors = [
  {name = "Evan Widloski", email = "evan_gh@widloski.com"}
]

[project.optional-dependencies]
extras = [
  "matplotlib"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['tomosphero']
